# MediQA-v1

./: .gitignore  .replit  DEPLOYMENT.md  MediQA_Detailed_Technical_Documentation.md  MediQA_Technical_Documentation.md  VERCEL_DEPLOYMENT.md  ai_service.py  api_validator.py  app.py  auth.py  calculator.py  config.py  document_processor.py  gamification.py  main.py  models.py  pyproject.toml  rag_engine.py  requirements.txt  routes.py  setup.py  vercel-build.sh  vercel.json
MediQA/: README.md  app.py  deployment_requirements.txt  models.py  package_requirements.txt  render.yaml  requirements_render.txt  setup.py
MediQA/attached_assets/: Pasted-Case-Study-1-Mrs-Boateng-a-52-year-old-teacher-came-to-the-pharmacy-complaining-of-a-burning-sen-1746041441513.txt  Pasted-When-it-comes-to-the-treatment-of-illnesses-some-of-them-come-with-multiple-forms-of-treatment--1746112898111.txt
MediQA/static/css/: style.css
MediQA/static/js/: auth.js  chat.js  dashboard.js  flashcards.js  gamification.js
MediQA/templates/: index.html  layout.html
attached_assets/: Pasted-Presenting-Complaint-Patient-is-a-22-year-old-female-presenting-with-recurrent-fevers-chills--1746096940338.txt  Pasted-The-main-goal-of-the-case-simulator-is-to-help-the-user-practice-how-to-diagnose-and-treat-certain-i-1746041646250.txt  Pasted-Topics-Diarrhoea-Rotavirus-Disease-and-Diarrhoea-Constipation-Peptic-Ulcer-Disease-Gastro-oe-1746041572169.txt  sql_schema_fixes_summary.md
static/js/: main.js  simulation.js
templates/: chat.html  dashboard.html  flashcards.html  leaderboard.html  simulation.html
