[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "mistralai>=1.7.0",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
]
